force-app/main/default/objects/Project_Module__c/Project_Module__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Governed delivery module grouping project work units, ownership, health and financial progress.</description><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><externalSharingModel>ControlledByParent</externalSharingModel><label>Project Module</label><nameField><label>Module Name</label><type>Text</type></nameField><pluralLabel>Project Modules</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>