force-app/main/default/objects/Project_Module__c/fields/Actual_Cost__c.field-meta.xml
<CustomField><fullName>Actual_Cost__c</fullName><defaultValue>0</defaultValue><label>Actual Cost</label><precision>18</precision><scale>2</scale><type>Currency</type></CustomField>