force-app/main/default/objects/Project_Module__c/fields/Completion_Percent__c.field-meta.xml
<CustomField><fullName>Completion_Percent__c</fullName><defaultValue>0</defaultValue><label>Completion %</label><precision>5</precision><scale>2</scale><type>Percent</type></CustomField>