force-app/main/default/objects/Project_Module__c/fields/Description__c.field-meta.xml
<CustomField><fullName>Description__c</fullName><label>Module Outcome</label><type>TextArea</type></CustomField>