force-app/main/default/objects/Project_Module__c/fields/Engagement__c.field-meta.xml
<CustomField><fullName>Engagement__c</fullName><label>Project</label><referenceTo>Engagement__c</referenceTo><relationshipLabel>Project Modules</relationshipLabel><relationshipName>Project_Modules</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>true</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>