force-app/main/default/objects/Project_Module__c/fields/Module_ID__c.field-meta.xml
<CustomField><fullName>Module_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Module ID</label><length>60</length><required>true</required><type>Text</type><unique>true</unique></CustomField>