force-app/main/default/objects/Project_Module__c/fields/Module_Type__c.field-meta.xml
<CustomField><fullName>Module_Type__c</fullName><label>Module Type</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Discover and Design</fullName><default>false</default><label>Discover and Design</label></value><value><fullName>Build and Integrate</fullName><default>true</default><label>Build and Integrate</label></value><value><fullName>Test and Release</fullName><default>false</default><label>Test and Release</label></value><value><fullName>Adoption and Run</fullName><default>false</default><label>Adoption and Run</label></value></valueSetDefinition></valueSet></CustomField>