force-app/main/default/objects/Project_Module__c/fields/Owner_Resource__c.field-meta.xml
<CustomField><fullName>Owner_Resource__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Module Lead</label><referenceTo>Resource__c</referenceTo><relationshipLabel>Owned Project Modules</relationshipLabel><relationshipName>Owned_Project_Modules</relationshipName><type>Lookup</type></CustomField>