force-app/main/default/objects/Project_Module__c/fields/Planned_Budget__c.field-meta.xml
<CustomField><fullName>Planned_Budget__c</fullName><defaultValue>0</defaultValue><label>Planned Budget</label><precision>18</precision><scale>2</scale><type>Currency</type></CustomField>