force-app/main/default/objects/Project_Module__c/fields/Sequence__c.field-meta.xml
<CustomField><fullName>Sequence__c</fullName><label>Sequence</label><precision>5</precision><scale>0</scale><type>Number</type></CustomField>