force-app/main/default/objects/Project_Module__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Planned</fullName><default>false</default><label>Planned</label></value><value><fullName>Active</fullName><default>true</default><label>Active</label></value><value><fullName>At Risk</fullName><default>false</default><label>At Risk</label></value><value><fullName>Complete</fullName><default>false</default><label>Complete</label></value><value><fullName>On Hold</fullName><default>false</default><label>On Hold</label></value></valueSetDefinition></valueSet></CustomField>