force-app/main/default/objects/Project_Module__c/fields/Sub_Portfolio__c.field-meta.xml
<CustomField><fullName>Sub_Portfolio__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Sub-portfolio</label><referenceTo>R360_Sub_Portfolio__c</referenceTo><relationshipLabel>Project Modules</relationshipLabel><relationshipName>Project_Modules</relationshipName><required>true</required><type>Lookup</type></CustomField>