force-app/main/default/objects/Project_Module__c/validationRules/Module_Dates_And_Progress.validationRule-meta.xml
<ValidationRule><fullName>Module_Dates_And_Progress</fullName><active>true</active><errorConditionFormula>OR(End_Date__c &lt; Start_Date__c, Completion_Percent__c &lt; 0, Completion_Percent__c &gt; 100, Planned_Budget__c &lt; 0, Actual_Cost__c &lt; 0)</errorConditionFormula><errorMessage>Module dates, progress and financials are invalid.</errorMessage></ValidationRule>