force-app/main/default/objects/Project_Module__c/validationRules/Module_Subportfolio_Matches_Project.validationRule-meta.xml
<ValidationRule><fullName>Module_Subportfolio_Matches_Project</fullName><active>true</active><errorConditionFormula>Sub_Portfolio__c &lt;&gt; Engagement__r.Sub_Portfolio__c</errorConditionFormula><errorMessage>Module sub-portfolio must match the project sub-portfolio.</errorMessage></ValidationRule>