force-app/main/default/objects/Project_Module__c/listViews/Active_Project_Modules.listView-meta.xml
<ListView><fullName>Active_Project_Modules</fullName><columns>NAME</columns><columns>Module_ID__c</columns><columns>Engagement__c</columns><columns>Module_Type__c</columns><columns>Status__c</columns><columns>Health__c</columns><columns>Completion_Percent__c</columns><columns>Owner_Resource__c</columns><filterScope>Everything</filterScope><filters><field>Status__c</field><operation>notEqual</operation><value>Complete</value></filters><label>Active Project Modules</label></ListView>